[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/goods/goods-grain.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/heading.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/buybtn.png" type="Texture" id=3]
[ext_resource path="res://assets/images/sellbtn.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buybtn-hover.png" type="Texture" id=5]
[ext_resource path="res://assets/images/sellbtn-hover.png" type="Texture" id=6]
[ext_resource path="res://prefabs/market_good/MarketGood.gd" type="Script" id=7]

[node name="MarketGood" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1217.0
margin_bottom = -1011.0
script = ExtResource( 7 )

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 256, 24 )
scale = Vector2( 0.708955, 0.708955 )
texture = ExtResource( 1 )

[node name="Tooltip" type="ColorRect" parent="."]
margin_left = 227.0
margin_right = 285.0
margin_bottom = 49.0
color = Color( 1, 1, 1, 0 )

[node name="Sell" type="Node2D" parent="."]
position = Vector2( 92, 7 )

[node name="ColorRect" type="ColorRect" parent="Sell"]
margin_left = -92.0
margin_top = 2.0
margin_right = -12.0
margin_bottom = 34.0
hint_tooltip = "Amount in stock"
color = Color( 0, 0, 0, 0.627451 )

[node name="ButtonSell" type="TextureButton" parent="Sell"]
margin_left = -5.0
margin_right = 130.0
margin_bottom = 35.0
hint_tooltip = "Sell Price"
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="Price" type="Label" parent="Sell"]
margin_left = 11.0
margin_top = -2.0
margin_right = 124.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.945098, 0.898039, 0.741176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1

[node name="Amount" type="Label" parent="Sell"]
margin_left = -92.0
margin_top = -1.0
margin_right = -13.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.945098, 0.898039, 0.741176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1

[node name="Buy" type="Node2D" parent="."]
position = Vector2( 324, 7 )

[node name="ColorRect" type="ColorRect" parent="Buy"]
margin_left = 107.0
margin_top = 2.0
margin_right = 187.0
margin_bottom = 34.0
hint_tooltip = "Amount in ship"
color = Color( 0, 0, 0, 0.627451 )

[node name="ButtonBuy" type="TextureButton" parent="Buy"]
margin_left = -35.0
margin_right = 100.0
margin_bottom = 35.0
hint_tooltip = "Buy Price"
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Price" type="Label" parent="Buy"]
margin_left = -28.0
margin_top = -2.0
margin_right = 85.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.945098, 0.898039, 0.741176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1

[node name="Amount" type="Label" parent="Buy"]
margin_left = 107.0
margin_top = -1.0
margin_right = 186.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.945098, 0.898039, 0.741176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1

[node name="AveragePriceBg" type="ColorRect" parent="."]
margin_left = 536.0
margin_top = 9.0
margin_right = 616.0
margin_bottom = 41.0
hint_tooltip = "Average price paid"
color = Color( 0, 0, 0, 0.627451 )

[node name="AveragePrice" type="Label" parent="."]
margin_left = 535.0
margin_top = 6.0
margin_right = 616.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 522.0
margin_top = 5.0
margin_right = 525.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 0.392157 )

[connection signal="button_up" from="Sell/ButtonSell" to="." method="_on_ButtonSell_button_up"]
[connection signal="button_up" from="Buy/ButtonBuy" to="." method="_on_ButtonBuy_button_up"]
